feat: add tv broadcasts and administration
